<resources>
    <string name="app_name">TesSuit1</string>
    <string name="name_hint">Name</string>
    <string name="palindrome_hint">Palindrome</string>
    <string name="button_check">CHECK</string>
    <string name="button_next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome_text">Welcome</string>
    <string name="username_text">Username</string>
    <string name="selected_username">Selected User Name</string>
    <string name="btn_choose">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="username_display">Firstname Lastname</string>
    <string name="email_display">Email</string>
</resources>